fix style: set canvas max weight and max height to prevent overflow

--- a/src/app/features/UploadImage/uploadImage.module.css
+++ b/src/app/features/UploadImage/uploadImage.module.css
@@ -2,14 +2,14 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  max-width: 100%;
-  /* height: 100vh; */
+  width: 100%;
+  height: 100vh;
   margin: 0 auto;
 }
 
 .imageCanvas {
-  width: 70%;
-  height: auto;
+  max-width: 80%;
+  max-height: 80%;
 }
 
 /* Desktop */
